--- a/photos.html
+++ b/photos.html
@@ -17,7 +17,7 @@
 
         <!-- Facebook and Twitter integration -->
         <meta property="og:title" content="Photos - Forrest Herman - Wedding Photographer + Filmmaker" />
-        <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:image" content="img/share-img-2.jpg" />
         <meta property="og:url" content="https://www.forrestherman.ca/" />
         <meta property="og:site_name" content="ForrestHerman.ca" />
         <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
@@ -159,6 +159,8 @@
                         <div class="row gallery">
                             <div class="wrapper-3-col animate-box">
                                 <!-- col 1 -->
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_018.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_013.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_009.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_059.jpg" alt="" /></div>
@@ -176,6 +178,8 @@
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
                                 <!-- col 2 -->
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_017.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_014.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_005.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_008.jpg" alt="" /></div>
@@ -193,6 +197,8 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
                                 <!-- col 3 -->
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_015.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_007.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_075.jpg" alt="" /></div>
