--- a/photos.html
+++ b/photos.html
@@ -159,7 +159,6 @@
                         <div class="row gallery">
                             <div class="wrapper-3-col animate-box">
                                 <!-- col 1 -->
-                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_018.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_013.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_009.jpg" alt="" /></div>
@@ -178,7 +177,7 @@
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
                                 <!-- col 2 -->
-                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_017.jpg" alt="" /></div>
+                                <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_017.jpg" alt="" /></div> -->
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_014.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_005.jpg" alt="" /></div>
@@ -197,9 +196,8 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
                                 <!-- col 3 -->
-                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_015.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_018.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_007.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_075.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/landscape_001.jpg" alt="" /></div>
