offerings and about update

--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                     <div class="row no-margin">
                         <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center fh5co-heading fh5co-heading-sm animate-box">
                             <span>About Me</span>
-                            <h2>hey, I'm Forrest</h2>
+                            <h2>Hey, I'm Forrest</h2>
                             <!-- <p>If you made it this far, it's likely you're considering me for your wedding. That's awesome, I look forward to meeting you and documenting your story.</p> -->
                             <p>
                                 I love nature, road trips, and standing on the ocean coast with salt in the air and the caress of a breeze on your face. And most of all, I love creating visuals with
