--- a/offerings.html
+++ b/offerings.html
@@ -160,7 +160,8 @@
                 <div id="wedding-elopement" class="container container-narrow">
                     <div class="row flex-row-md fh5co-section less-vertical-padding">
                         <div class="col-md-5 order-md-2 img-container animate-box">
-                            <img src="/img/Event_Mel_Wedding_001.jpg" alt="" />
+                            <!-- <img src="/img/Event_Mel_Wedding_001.jpg" alt="" /> -->
+                            <img src="/img/portrait_013.jpg" alt="" />
                         </div>
                         <div class="col-md-7 order-md-1 text-center fh5co-heading fh5co-heading-sm animate-box">
                             <h2 style="text-transform: uppercase">Weddings + Elopements</h2>
