--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,10 @@
                                         </p>
                                     </li>
                                 </ul>
-                                <div class="img-container d-sm-none" style="padding: 4rem; padding-left: 0">
+                                <div class="img-container d-sm-none" style="padding: 4rem 4rem 1rem 0rem; padding-left: 0">
+                                    <img src="/img/detail_001.jpg" alt="" />
+                                </div>
+                                <div class="img-container d-sm-none" style="padding: 1rem 4rem 4rem 0rem; padding-left: 0">
                                     <img src="/img/Portfolio_056.jpg" alt="" />
                                 </div>
                             </div>
