--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
                         </header>
                     </div>
                     <div class="carousel item">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_013.jpg); background-position: 50% 50% !important">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
                         <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg); background-position: 46% 10% !important">
                             <div class="overlay-prep overlay-light"></div>
                         </header>
