--- a/index.html
+++ b/index.html
@@ -151,9 +151,18 @@
                             <div class="overlay-prep overlay-light"></div>
                         </header>
                     </div>
-
                     <div class="carousel item">
                         <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_005.jpg); background-position: 50% 10% !important">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_009.jpg); background-position: 30% 70% !important">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_016.jpg); background-position: 30% 50% !important">
                             <div class="overlay-prep overlay-light"></div>
                         </header>
                     </div>
@@ -164,6 +173,11 @@
                     </div>
                     <div class="carousel item">
                         <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)" data-stellar-background-ratio="0.5">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_011.jpg); background-position: 50% 50% !important">
                             <div class="overlay-prep overlay-light"></div>
                         </header>
                     </div>
