--- a/offerings.html
+++ b/offerings.html
@@ -228,9 +228,9 @@
                                 <a class="btn" href="/contact">Inquire Here</a>
                             </div>
                         </div>
-                        <!-- <div class="img-container animate-box">
-                            <img src="/img/Portfolio_047.jpg" alt="" />
-                        </div> -->
+                        <div class="img-container animate-box">
+                            <img src="/img/landscape_015.jpg" alt="" />
+                        </div>
                     </div>
                 </div>
                 <hr class="container" />
@@ -241,11 +241,17 @@
                         </div>
                         <div class="flex-col justify-center">
                             <div class="img-container animate-box">
+                                <img src="/img/landscape_017.jpg" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="pets" class="container container-narrow">
+                    <div class="row fh5co-section less-vertical-padding">
+                        <div class="flex-col justify-center">
+                            <div class="img-container animate-box">
                                 <img src="/img/Puppy.jpg" alt="" />
                             </div>
-                            <!-- <div class="img-container animate-box">
-                                <img src="/img/Portfolio_055.jpg" alt="" />
-                            </div> -->
                         </div>
                     </div>
                 </div>
