--- a/photos.html
+++ b/photos.html
@@ -124,22 +124,6 @@
                 </div>
             </nav>
 
-            <!-- <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner">
-		<div class="overlay-light"></div>
-		<div class="fh5co-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Services</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header> -->
-
             <div class="container nav-spacer"></div>
             <div id="fh5co-gallery">
                 <!-- class="fh5co-section-gray" -->
@@ -168,6 +152,7 @@
                                 <div class="portfolio-img-container order-md-2"><img src="/img/portrait_024.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-2"><img src="/img/landscape_004.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_060.jpg" alt="" /></div>
+
                                 <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_013.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_065.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_010.jpg" alt="" /></div>
@@ -179,8 +164,9 @@
                                 <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_006.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
+
                                 <!-- col 2 -->
-                                <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_017.jpg" alt="" /></div> -->
+
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_014.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-2"><img src="/img/landscape_010.jpg" alt="" /></div>
@@ -190,6 +176,7 @@
                                 <div class="portfolio-img-container order-md-2"><img src="/img/portrait_019.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/landscape_003.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/portrait_002.jpg" alt="" /></div>
+
                                 <div class="portfolio-img-container order-md-7"><img src="/img/Portfolio_072.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_042.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_009.jpg" alt="" /></div>
@@ -211,6 +198,7 @@
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_075.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/landscape_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_061.jpg" alt="" /></div>
+
                                 <div class="portfolio-img-container order-md-3"><img src="/img/portrait_003.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" /></div>
@@ -224,6 +212,57 @@
                                 <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_002.jpg" alt="" /></div>
                             </div>
                         </div>
+
+                        <div class="row gallery">
+                            <div class="wrapper-col animate-box">
+                                <div class="portfolio-img-container order-md-22"><img src="/img/landscape_019.jpg" alt="" /></div>
+                            </div>
+                        </div>
+                        <!-- <div class="row gallery">
+                            <div class="wrapper-3-col animate-box">
+                                col 1
+
+                                <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_013.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_065.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_010.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_030.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-11"><img src="/img/Portfolio_036.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-14"><img src="/img/Portfolio_035.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_041.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_048.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_006.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
+
+                                col 2
+
+                                <div class="portfolio-img-container order-md-7"><img src="/img/Portfolio_072.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_042.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_009.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-9"><img src="/img/Portfolio_027.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-12"><img src="/img/Portfolio_034.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_043.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_037.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_047.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-18"><img src="/img/Portfolio_005.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
+
+                                col 3
+
+                                <div class="portfolio-img-container order-md-3"><img src="/img/portrait_003.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-5"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-10"><img src="/img/Portfolio_053.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-13"><img src="/img/Portfolio_038.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-16"><img src="/img/Portfolio_028.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_031.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-16"><img src="/img/Portfolio_051.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_045.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_004.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_002.jpg" alt="" /></div>
+                            </div>
+                        </div> -->
                     </div>
 
                     <!-- 
