--- a/index.html
+++ b/index.html
@@ -333,6 +333,23 @@
                                         <div class="item">
                                             <div class="testimony-slide active text-center">
                                                 <figure>
+                                                    <img class="testimonial-img" style="object-position: center 60%" src="img/testimonial_lori.jpg" alt="user" />
+                                                </figure>
+                                                <span>Lori Burns</span>
+                                                <blockquote>
+                                                    <p>
+                                                        Forrest is extremely professional with his work. His easy-going manner helped me feel relaxed during the photo-taking process. The quality of
+                                                        his work whilst on site and as a finished product is nothing short of excellent. I am amazed with the photos and Forrest has exceeded my
+                                                        expectations in every aspect; the end result of his photography is truly magical!
+                                                    </p>
+                                                    <p>I highly recommend Forrest for any event, family photos, portraits and special photos with your animal companions. Thank you Forrest!</p>
+                                                    <!-- <p>Highly recommend him for any event or family photos you need!</p> -->
+                                                </blockquote>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="testimony-slide active text-center">
+                                                <figure>
                                                     <img class="testimonial-img" style="object-position: center center" src="img/landscape_004.jpg" alt="user" />
                                                 </figure>
                                                 <span>Alex & Sarah</span>
