--- a/alertBar.html
+++ b/alertBar.html
@@ -1,7 +1,7 @@
 <div class="sticky-footer hidden">
     <div id="sticky-footer-bar" class="row no-margin">
         <h4 class="sticky-footer-text col-sm-8 col-sm-offset-2">
-            <a href="/contact.html">Now booking 2021 & 2022 weddings! Claim your date today!</a>
+            <a href="/contact.html">Now booking 2022 weddings! Claim your date today!</a>
         </h4>
         <h4 class="sticky-footer-text display-none-sm">
             <ul class="social-icons">
