--- a/index.html
+++ b/index.html
@@ -350,6 +350,20 @@
                                         <div class="item">
                                             <div class="testimony-slide active text-center">
                                                 <figure>
+                                                    <img class="testimonial-img" style="object-position: center 50%" src="img/testimonial_tanja.jpg" alt="user" />
+                                                </figure>
+                                                <span>Tanja Robertson</span>
+                                                <blockquote>
+                                                    <p>
+                                                        Our family pictures tuned out amazing! Absolutely love them! Forrest did a great job making us feel comfortable and he picked out the best spots
+                                                        for the best photos!
+                                                    </p>
+                                                </blockquote>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="testimony-slide active text-center">
+                                                <figure>
                                                     <img class="testimonial-img" style="object-position: center center" src="img/landscape_004.jpg" alt="user" />
                                                 </figure>
                                                 <span>Alex & Sarah</span>
