--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
 
             gtag("config", "G-M423Z0G5J7")
         </script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198341365-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag("js", new Date())
+
+            gtag("config", "UA-198341365-1")
+        </script>
     </head>
     <body>
         <div class="fh5co-loader"></div>
