--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198341365-1"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198341365-1"></script>
         <script>
             window.dataLayer = window.dataLayer || []
             function gtag() {
@@ -98,7 +98,7 @@
             gtag("js", new Date())
 
             gtag("config", "UA-198341365-1")
-        </script>
+        </script> -->
     </head>
     <body>
         <div class="fh5co-loader"></div>
