pricing update and verbiage

--- a/index.html
+++ b/index.html
@@ -484,8 +484,10 @@
                             <div class="col-md-10 feature-copy">
                                 <h3>Weddings + Elopements</h3>
                                 <p style="margin-bottom: 10px">
-                                    My wedding packages begin at $800. Packages range from just a few hours to a full
-                                    day's worth of photo-journalism coverage. Contact me for a custom quote.
+                                    My wedding packages begin at $900. Packages range from just a few hours to a full
+                                    day's worth of photo-journalism coverage. All collections include individually
+                                    retouched digital images, an online gallery and an
+                                    unlimited print release. Contact me for a custom quote.
                                 </p>
                                 <p><a href="offerings#wedding-elopement">Explore packages</a></p>
                             </div>
