insta callout photo update

--- a/films.html
+++ b/films.html
@@ -4,130 +4,130 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
-    <!--<![endif]-->
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Films - Forrest Herman - Wedding Photographer + Filmmaker</title>
-        <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
-        <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
-        <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
+<!--<![endif]-->
 
-        <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="Films - Forrest Herman - Wedding Photographer + Filmmaker" />
-        <meta property="og:image" content="img/share-img-2.jpg" />
-        <meta property="og:url" content="https://www.forrestherman.ca/" />
-        <meta property="og:site_name" content="ForrestHerman.ca" />
-        <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
-        <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
-        <meta name="twitter:url" content="" />
-        <meta name="twitter:card" content="" />
-        <!-- Pinterest -->
-        <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Films - Forrest Herman - Wedding Photographer + Filmmaker</title>
+    <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+    <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description"
+        content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
+    <meta name="keywords"
+        content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
-        <!-- Fonts -->
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-            rel="stylesheet"
-        />
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="Films - Forrest Herman - Wedding Photographer + Filmmaker" />
+    <meta property="og:image" content="img/share-img-2.jpg" />
+    <meta property="og:url" content="https://www.forrestherman.ca/" />
+    <meta property="og:site_name" content="ForrestHerman.ca" />
+    <meta property="og:description"
+        content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
+    <meta name="twitter:title" content="" />
+    <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+    <meta name="twitter:url" content="" />
+    <meta name="twitter:card" content="" />
+    <!-- Pinterest -->
+    <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+        rel="stylesheet" />
 
-        <!-- Font Awesome -->
-        <script src="https://use.fontawesome.com/bfdc9bea0d.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <!-- Animate.css -->
-        <link rel="stylesheet" href="css/animate.css" />
-        <!-- Icomoon Icon Fonts-->
-        <link rel="stylesheet" href="css/icomoon.css" />
-        <!-- Bootstrap  -->
-        <link rel="stylesheet" href="css/bootstrap.css" />
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/bfdc9bea0d.js"></script>
 
-        <!-- Magnific Popup -->
-        <link rel="stylesheet" href="css/magnific-popup.css" />
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="css/animate.css" />
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="css/icomoon.css" />
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="css/bootstrap.css" />
 
-        <!-- Owl Carousel  -->
-        <link rel="stylesheet" href="css/owl.carousel.min.css" />
-        <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <!-- Magnific Popup -->
+    <link rel="stylesheet" href="css/magnific-popup.css" />
 
-        <!-- Theme style  -->
-        <link rel="stylesheet" href="css/style.css" />
+    <!-- Owl Carousel  -->
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
 
-        <!-- Modernizr JS -->
-        <script src="js/modernizr-2.6.2.min.js"></script>
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="css/style.css" />
 
-        <!-- JQuery -->
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <!-- Modernizr JS -->
+    <script src="js/modernizr-2.6.2.min.js"></script>
 
-        <!-- FOR IE9 below -->
-        <!--[if lt IE 9]>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
             <script src="js/respond.min.js"></script>
         <![endif]-->
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M423Z0G5J7"></script>
-        <script>
-            window.dataLayer = window.dataLayer || []
-            function gtag() {
-                dataLayer.push(arguments)
-            }
-            gtag("js", new Date())
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M423Z0G5J7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || []
+        function gtag() {
+            dataLayer.push(arguments)
+        }
+        gtag("js", new Date())
 
-            gtag("config", "G-M423Z0G5J7")
-        </script>
-    </head>
-    <body>
-        <div class="fh5co-loader"></div>
+        gtag("config", "G-M423Z0G5J7")
+    </script>
+</head>
 
-        <div id="page">
-            <!-- ****************************************** Black Nav ****************************************** -->
+<body>
+    <div class="fh5co-loader"></div>
 
-            <nav id="navbar" class="fh5co-nav" role="navigation">
-                <!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
-                <div class="container">
-                    <div id="nav" class="row nav nav-black">
-                        <div class="col-xs-2 col-nav">
-                            <div id="fh5co-logo">
-                                <a href="index">
-                                    <img id="logo" src="img/forrest-herman-black.png" alt="logo" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-10 text-right menu-1">
-                            <ul id="nav-menu" class="nav-menu">
-                                <li class="hidden-on-mobile"><a href="index">Home</a></li>
-                                <li><a href="about">Hello</a></li>
-                                <li>
-                                    <a href="photos">Photos</a>
-                                </li>
-                                <li>
-                                    <a href="films">Films</a>
-                                </li>
-                                <li class="has-dropdown">
-                                    <a href="offerings">Offerings</a>
-                                    <ul class="dropdown">
-                                        <li><a href="offerings">Photos</a></li>
-                                        <li><a href="#">Films</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact">Contact</a></li>
-                            </ul>
+    <div id="page">
+        <!-- ****************************************** Black Nav ****************************************** -->
+
+        <nav id="navbar" class="fh5co-nav" role="navigation">
+            <!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
+            <div class="container">
+                <div id="nav" class="row nav nav-black">
+                    <div class="col-xs-2 col-nav">
+                        <div id="fh5co-logo">
+                            <a href="index">
+                                <img id="logo" src="img/forrest-herman-black.png" alt="logo" />
+                            </a>
                         </div>
                     </div>
+                    <div class="col-xs-10 text-right menu-1">
+                        <ul id="nav-menu" class="nav-menu">
+                            <li class="hidden-on-mobile"><a href="index">Home</a></li>
+                            <li><a href="about">Hello</a></li>
+                            <li>
+                                <a href="photos">Photos</a>
+                            </li>
+                            <li>
+                                <a href="films">Films</a>
+                            </li>
+                            <li class="has-dropdown">
+                                <a href="offerings">Offerings</a>
+                                <ul class="dropdown">
+                                    <li><a href="offerings">Photos</a></li>
+                                    <li><a href="#">Films</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="contact">Contact</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
-            <!-- <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner">
+        <!-- <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner">
                 <div class="overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
@@ -145,38 +145,40 @@
                     </div>
                 </div>
             </header> -->
-            <div class="container nav-spacer"></div>
+        <div class="container nav-spacer"></div>
 
-            <div class="container">
-                <!-- <div id="fh5co-films" class="fh5co-section-gray"> -->
-                <div class="row fh5co-section">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <span>Wedding</span>
-                        <h2 class="portfolio">Films</h2>
-                        <!-- <p>
+        <div class="container">
+            <!-- <div id="fh5co-films" class="fh5co-section-gray"> -->
+            <div class="row fh5co-section">
+                <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                    <span>Wedding</span>
+                    <h2 class="portfolio">Films</h2>
+                    <!-- <p>
 							Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
 							there live the blind texts.
 						</p> -->
-                    </div>
+                </div>
 
-                    <div class="col-md-12 no-padding animate-box">
-                        <div class="fh5co-video fh5co-bg" style="background-image: url('/img/KevinandKatyThumbnailVimeo.jpg')">
-                            <div class="video-text-container">
-                                <h3>Katy + Kevin</h3>
-                                <h4>September 2020</h4>
-                                <div class="row flex-row align-items-center">
-                                    <a href="https://vimeo.com/462731341?wmode=opaque&byline=0&title=0" class="popup-vimeo"> <i class="icon-play video-text"></i></a>
-                                    <!-- <span style="text-align: center; vertical-align: middle">Play Film</span> -->
-                                </div>
+                <div class="col-md-12 no-padding animate-box">
+                    <div class="fh5co-video fh5co-bg"
+                        style="background-image: url('/img/KevinandKatyThumbnailVimeo.jpg')">
+                        <div class="video-text-container">
+                            <h3>Katy + Kevin</h3>
+                            <h4>September 2020</h4>
+                            <div class="row flex-row align-items-center">
+                                <a href="https://vimeo.com/462731341?wmode=opaque&byline=0&title=0" class="popup-vimeo">
+                                    <i class="icon-play video-text"></i></a>
+                                <!-- <span style="text-align: center; vertical-align: middle">Play Film</span> -->
                             </div>
-
-                            <div class="overlay"></div>
                         </div>
+
+                        <div class="overlay"></div>
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
-            <!-- 
+        </div>
+        <!-- </div> -->
+        <!-- 
             <div
                 class="block-container block-video-player-banner page-block block-container--flushed-top-on-first-rank"
                 id="block-container-QXWVpY"
@@ -253,48 +255,49 @@
                 </div>
             </div> -->
 
-            <!-- Insta Callout -->
-            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/instagram_banner.jpg)">
-                <div class="overlay"></div>
-                <div class="animate-box">
-                    <div include-html="callout_insta.html"></div>
-                </div>
+        <!-- Insta Callout -->
+        <div id="fh5co-started" class="fh5co-bg banner" style="background-image: url(img/instagram_banner_3.jpg)">
+            <div class="overlay"></div>
+            <div class="animate-box">
+                <div include-html="callout_insta.html"></div>
             </div>
-
-            <!-- Footer -->
-            <div include-html="footer.html"></div>
         </div>
 
-        <div include-html="alertBar.html"></div>
+        <!-- Footer -->
+        <div include-html="footer.html"></div>
+    </div>
 
-        <div class="gototop js-top hidden-on-mobile">
-            <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-        </div>
+    <div include-html="alertBar.html"></div>
 
-        <!-- jQuery -->
-        <script src="js/jquery.min.js"></script>
-        <!-- jQuery Easing -->
-        <script src="js/jquery.easing.1.3.js"></script>
-        <!-- Bootstrap -->
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Waypoints -->
-        <script src="js/jquery.waypoints.min.js"></script>
-        <!-- Carousel -->
-        <script src="js/owl.carousel.min.js"></script>
-        <!-- countTo -->
-        <script src="js/jquery.countTo.js"></script>
+    <div class="gototop js-top hidden-on-mobile">
+        <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+    </div>
 
-        <!-- Stellar -->
-        <script src="js/jquery.stellar.min.js"></script>
-        <!-- Magnific Popup -->
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/magnific-popup-options.js"></script>
+    <!-- jQuery -->
+    <script src="js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="js/jquery.waypoints.min.js"></script>
+    <!-- Carousel -->
+    <script src="js/owl.carousel.min.js"></script>
+    <!-- countTo -->
+    <script src="js/jquery.countTo.js"></script>
 
-        <!-- Main -->
-        <script src="js/main.js"></script>
-        <!-- Bring in Html elements -->
-        <script>
-            includeHTML()
-        </script>
-    </body>
+    <!-- Stellar -->
+    <script src="js/jquery.stellar.min.js"></script>
+    <!-- Magnific Popup -->
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/magnific-popup-options.js"></script>
+
+    <!-- Main -->
+    <script src="js/main.js"></script>
+    <!-- Bring in Html elements -->
+    <script>
+        includeHTML()
+    </script>
+</body>
+
 </html>
