--- a/offerings.html
+++ b/offerings.html
@@ -267,7 +267,7 @@
         </div>
 
         <!-- Insta Callout -->
-        <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/instagram_banner.jpg)">
+        <div id="fh5co-started" class="fh5co-bg banner" style="background-image: url(img/instagram_banner_3.jpg)">
             <div class="overlay"></div>
             <div class="animate-box">
                 <div include-html="callout_insta.html"></div>
