remove typeform and update copyright year

--- a/footer.html
+++ b/footer.html
@@ -41,13 +41,13 @@
                         </div>
                     </div> -->
     <div class="container">
-        <div class="footer-logo img-container flex-col align-items-center justify-center text-center" style="margin-bottom: 30px">
-            <p style="margin-bottom: -30px; z-index: 10">LGBTQ+ affirming. BIPOC lives matter. All are welcome &#10084;</p>
-            <img
-                style="max-width: 400px"
+        <div class="footer-logo img-container flex-col align-items-center justify-center text-center"
+            style="margin-bottom: 30px">
+            <p style="margin-bottom: -30px; z-index: 10">LGBTQ+ affirming. BIPOC lives matter. All are welcome &#10084;
+            </p>
+            <img style="max-width: 400px"
                 src="https://blush.design/api/download?shareUri=y_TRIn14rWFYlZu9&c=Bottom_0%7E393f82-0.1%7E393f82-0.2%7E89c5cc_Hair_0%7E4a312c-0.1%7E2c1b18-0.2%7E181658_Skin_0%7Ed4a181-0.1%7E915b3c-0.2%7Eb28b67_Top_0%7E43d26c-0.1%7Ef2f2f2-0.2%7Effa434&bg=fdfbf7&w=800&h=800&fm=png"
-                alt=""
-            />
+                alt="" />
         </div>
         <div class="footer-logo img-container display-flex-row justify-center">
             <a href="index">
@@ -57,30 +57,35 @@
         <div class="row copyright">
             <div class="col-md-12 text-center">
                 <p>
-                    Copyright &copy; 2021
-                    <script>
+                    Copyright &copy; 2022
+                    <!-- <script>
                         document.write(new Date().getFullYear())
-                    </script>
+                    </script> -->
                     Forrest Herman
                     <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                     <br />
-                    <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Inquiry"> forrestherman.ca@gmail.com </a>
+                    <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Inquiry">
+                        forrestherman.ca@gmail.com </a>
                     <br />
                     <a href="tel:7052032534"> (705) 203-2534</a>
                 </p>
                 <div>
                     <ul class="fh5co-social-icons">
                         <li>
-                            <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/forrestherman/" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/forrestherman.ca" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/forrestherman.ca" target="_blank"><i
+                                    class="fab fa-facebook-f"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
+                            <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i
+                                    class="fab fa-pinterest-p"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/channel/UCiCwYNjYVr0BH-XRuKIDn9Q" target="_blank"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/channel/UCiCwYNjYVr0BH-XRuKIDn9Q" target="_blank"><i
+                                    class="fab fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
