--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
     </div>
 
     <!-- Typeform Sidebar -->
-    <div class="hidden-on-hero hidden hidden-on-mobile"
+    <!-- <div class="hidden-on-hero hidden hidden-on-mobile"
         style="position: fixed; top: calc(50% - 250px); right: 0; transition: width 300ms ease-out; width: 0"
         data-qa="side_panel">
         <a class="typeform-share button" href="https://form.typeform.com/to/AoN00cGe?typeform-medium=embed-snippet"
@@ -727,7 +727,7 @@
                     q.parentNode.insertBefore(js, q)
                 }
             })()
-    </script>
+    </script> -->
 
     <!-- <div data-tf-chat data-tf-tooltip="Hey 👋&nbsp;&nbsp;How can I help you? " data-tf-popover="AoN00cGe" data-tf-button-color="#AD977B"></div>
         <script src="//embed.typeform.com/next/embed.js"></script> -->
