--- a/offerings.html
+++ b/offerings.html
@@ -285,7 +285,7 @@
     </div>
 
     <!-- Typeform Sidebar -->
-    <div class="hidden-on-hero hidden hidden-on-mobile"
+    <!-- <div class="hidden-on-hero hidden hidden-on-mobile"
         style="position: fixed; top: calc(50% - 250px); right: 0; transition: width 300ms ease-out; width: 0"
         data-qa="side_panel">
         <a class="typeform-share button" href="https://form.typeform.com/to/AoN00cGe?typeform-medium=embed-snippet"
@@ -349,7 +349,7 @@
                     q.parentNode.insertBefore(js, q)
                 }
             })()
-    </script>
+    </script> -->
 
     <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
