--- a/photos.html
+++ b/photos.html
@@ -145,6 +145,8 @@
                             <!-- col 1 -->
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_013.jpg" alt="" />
                             </div>
+                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_031.jpg" alt="" />
+                            </div>
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_001.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-1"><img src="/img/landscape_014.jpg" alt="" />
@@ -189,6 +191,8 @@
 
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_014.jpg" alt="" />
                             </div>
+                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_030.jpg" alt="" />
+                            </div>
                             <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-2"><img src="/img/landscape_010.jpg" alt="" />
@@ -228,8 +232,11 @@
                             </div>
                             <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" />
                             </div>
+
                             <!-- col 3 -->
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" />
+                            </div>
+                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_032.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_018.jpg" alt="" />
                             </div>
